# Bridges

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bridges.json  package-lock.json  package.json  public-beta-allowlist.txt  tsconfig.json
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: client_config.rs  commands.rs  config.rs  connmgr.rs  conversation_memory.rs  coord_client.rs  crypto.rs  daemon.rs  db.rs  derp_client.rs  error.rs  gitea_setup.rs  identity.rs  local_api.rs  main.rs  mdns.rs  models.rs  noise.rs  permissions.rs  presence.rs  queries.rs  service.rs  stun.rs  sync_engine.rs  transport.rs  watcher.rs  workspace.rs
cli/src/listener/: dispatch.rs  mod.rs  runtimes.rs
cli/src/serve/: auth.rs  contacts.rs  endpoints.rs  invites.rs  keys.rs  mod.rs  oauth.rs  projects.rs  relay.rs  skills.rs  tokens.rs  users.rs
docker/: Dockerfile.build  docker-compose.yml
docs/: addressing-model.md  core-architecture.md  delivery-semantics.md  e2e-test-guide.md  identity-lifecycle.md  mac-pi-setup-guide.md  permissions-model.md  presence-model.md  privacy-model.md  public-beta-plan.md  public-release-checklist.md  self-host-guide.md  test-guide.md
registry/: package-lock.json  package.json
registry/src/: auth.test.ts  auth.ts  index.ts  server.ts  validation.ts
scripts/: brand-public-beta.mjs  copy-native.js  export-public-beta.sh  mock-chat-runtime.js  postinstall.js  prepare-plugin-preview.js  sync-version.js  tmux-two-agent-smoke.sh
skills/bridges/: SKILL.md
web/: .env.example  next.config.ts  package-lock.json  package.json
(+46 files in other folders)
