[package]
name = "bridges"
version = "0.0.1-beta"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
bs58 = "0.5"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
notify = "6"
hex = "0.4"
x25519-dalek = { version = "2", features = ["static_secrets"] }
curve25519-dalek = "4"
chacha20poly1305 = "0.10"
hkdf = "0.12"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
directories = "5"
async-trait = "0.1"
snow = "0.9"
argon2 = "0.5"
jsonwebtoken = "9"
tower-http = { version = "0.5", features = ["cors"] }
tower = { version = "0.4", features = ["limit"] }
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "builder"], default-features = false }
